--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koa-favi",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "favicon middleware for koa",
   "main": "index.js",
   "scripts": {
@@ -11,5 +11,8 @@
     "favicon"
   ],
   "author": "Pana",
+  "engines": {
+    "node": ">= 0.11.9"
+  },
   "license": "MIT"
 }
